examples/test/testpolicy213.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy213
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key16: value25
      key19: value36
      key8: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value33
          key35: value20
      podSelector:
        matchLabels:
          key48: value30
